fixed menu and repositioned info

--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
                 <nav class="navbar navbar-expand-lg fixed-top py-3">
                     <div class="container">
                         <!--<a href="main.html"><img src="image/logo.PNG" alt="" class="navbar-brand" width="120" height="100"></a> -->
-                        <a href="main.html" class="navbar-brand text-uppercase font-weight-bold">Kam Ding Seafood Restaurant</a> 
-
-                        
+                        <a href="index.html" class="navbar-brand text-uppercase font-weight-bold">Kam Ding Seafood Restaurant</a>                         
                         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
                         <div id="navbarSupportedContent" class="collapse navbar-collapse">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item active"><a href="main.html" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
+                                <li class="nav-item active"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
                                 <li class="nav-item"><a href="kamdingmenu.pdf" class="nav-link text-uppercase font-weight-bold">Menu</a></li>
                          <!--   <li class="nav-item"><a href="gallery.html" class="nav-link text-uppercase font-weight-bold">Gallery</a></li> -->
                             </ul>
