--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Kam Ding</title>
 </head>
+
 <body>
     <header>
         <div class="logo-container">
-           <!-- <a href="index.html"><img src="img/logo.jpg" alt="" width="150" height="100"></a> -->
+            <!-- <a href="index.html"><img src="img/logo.jpg" alt="" width="150" height="100"></a> -->
             <a href="index.html" class="logo">KAM DING SEAFOOD RESTAURANT</a>
         </div>
         <nav>
@@ -30,6 +32,7 @@
                         3021 Anson Ave, Coquitlam, BC V3B 2H6 <br>
                         Hours: 10AM-6PM Everyday<br>
                         Take Out Only<br>
+                        Dine in starting on June 16<br>
                         Contact Us: 604-464-8819
                     </p>
                 </div>
@@ -42,10 +45,11 @@
             </div>
         </section>
 
-        
+
 
         <script src="javascript/script.js"></script>
     </main>
 
 </body>
+
 </html>
