--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     <p>
                         3021 Anson Ave, Coquitlam, BC V3B 2H6 <br>
                         Hours: 10AM-8PM Everyday<br>
-                        Take Out Only<br>
-                        Dine in starting on June 16<br>
+                        Dine In & Take Out<br>
                         Contact Us: 604-464-8819
                     </p>
                 </div>
