--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
 
     <main>
+        <div class="temp">We are temporarily closed May 17th-20th. We will re-open May 21st with our regular hours at 10AM-8PM. Thank you.</div>
         <section class="presentation">
             <div class="info">
                 <div class="location">
