--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-link">HOME</a></li>
-                <li><a href="Kmenu.pdf" class="nav-link">MENU</a></li>
+                <li><a href="Menu.pdf" class="nav-link">MENU</a></li>
             </ul>
         </nav>
     </header>
