--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
                     <button class="cta-menu" id="cta-menu">Menu</button>
                 </div>
             </div>
+            <div class="notice-container">
+                <p class="notice">
+                    Kam Ding Seafood restaurant will be closing our doors. Our last day will be on November 8, 2023. 
+                    Thank you so much for all of your support!
+                    金鼎營業到2023年11月8日。感謝你們多年來的支持 !
+                </p>
+            </div>
             <div class="cover">
                 <img src="img/logo.jpg" alt="bigLogo">
             </div>
