--- a/index.html
+++ b/index.html
@@ -13,46 +13,21 @@
 <body>
     <header>
         <div class="logo-container">
-            <!-- <a href="index.html"><img src="img/logo.jpg" alt="" width="150" height="100"></a> -->
-            <a href="index.html" class="logo">KAM DING SEAFOOD RESTAURANT</a>
+            <p class="logo">KAM DING SEAFOOD RESTAURANT</p>
         </div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html" class="nav-link">HOME</a></li>
-                <li><a href="Menu.pdf" class="nav-link">MENU</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
         <section class="presentation">
-            <div class="info">
-                <div class="location">
-                    <p>
-                        3021 Anson Ave, Coquitlam, BC V3B 2H6 <br>
-                        Hours: 10AM-8PM Everyday<br>
-                        Dine In & Take Out<br>
-                        Contact Us: 604-464-8819
-                    </p>
-                </div>
-                <div class="cta">
-                    <button class="cta-menu" id="cta-menu">Menu</button>
-                </div>
-            </div>
             <div class="notice-container">
                 <p class="notice">
-                    Kam Ding Seafood restaurant will be closing our doors. Our last day will be on November 8, 2023. 
-                    Thank you so much for all of your support!
-                    金鼎營業到2023年11月8日。感謝你們多年來的支持 !
+                    Kam Ding Seafood restaurant is now closed. Thank you so much for all of your support!
                 </p>
             </div>
             <div class="cover">
                 <img src="img/logo.jpg" alt="bigLogo">
             </div>
         </section>
-
-
-
         <script src="javascript/script.js"></script>
     </main>
 
